--- a/data/components/nav.ejs
+++ b/data/components/nav.ejs
@@ -7,19 +7,21 @@
   }
 %>
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <a class="navbar-brand">
-    <img src="/styles/logo.webp" alt="WylieYYYY's Projects" style="width: 10rem; height: 2rem;"/>
-  </a>
-  <ul class="navbar-nav mr-auto">
-    <% for (const [name, path] of Object.entries(pagePairs)) { -%>
-      <% if (current === path) { -%>
-        <li class="nav-item active">
-          <a class="nav-link" href="#"><%- name %><span class="sr-only"> (current)</span></a>
-      <% } else { -%>
-        <li class="nav-item">
-          <a class="nav-link" href="/<%= path %>"><%- name %></a>
+  <div class="container-fluid justify-content-start">
+    <a class="navbar-brand">
+      <img src="/styles/logo.webp" alt="WylieYYYY's Projects" style="width: 10rem; height: 2rem;"/>
+    </a>
+    <ul class="navbar-nav mr-auto">
+      <% for (const [name, path] of Object.entries(pagePairs)) { -%>
+        <% if (current === path) { -%>
+          <li class="nav-item">
+            <a class="nav-link active" href="#"><%- name %><span class="visually-hidden"> (current)</span></a>
+        <% } else { -%>
+          <li class="nav-item">
+            <a class="nav-link" href="/<%= path %>"><%- name %></a>
+        <% } -%>
+        </li>
       <% } -%>
-      </li>
-    <% } -%>
-  </ul>
+    </ul>
+  </div>
 </nav>
