--- a/data/pages/blog.html.ejs
+++ b/data/pages/blog.html.ejs
@@ -18,7 +18,7 @@
         }
       %>
       <% for (const [idx, post] of posts.entries()) { -%>
-        <div class="card m-5" style="background-color: #121212; width: 80%;
+        <div class="card text-light m-5" style="background-color: #121212; width: 80%;
             border-top: 3px solid <%= getRainbow(posts.length - idx) %>;">
           <div class="card-body">
             <h5 class="card-title"><%= post.title %></h5>
