--- a/data/pages/demoinfo.html.ejs
+++ b/data/pages/demoinfo.html.ejs
@@ -6,7 +6,11 @@
   </head>
   <body class="text-light">
     <%- include('../components/nav'); -%>
-    <main class="jumbotron text-light bg-dark m-3 py-4"><%- content -%></main>
+    <main class="m-3">
+      <div class="container text-light bg-dark rounded-3 p-5">
+        <%- content -%>
+      </div>
+    </main>
     <%- include('../components/footer'); -%>
   </body>
 </html>
