--- a/data/pages/projects.html.ejs
+++ b/data/pages/projects.html.ejs
@@ -26,26 +26,28 @@
   </head>
   <body>
     <%- include('../components/nav'); -%>
-    <main id="app">
+    <main id="app" data-bs-theme="dark">
       <div style="position: absolute; width: 100%;">
         <script type="text/x-template" class="show-on-js">
           <div v-for="error in errors" v-show="true"
               class="alert alert-danger alert-dismissible container custom-alert"
               style="display: none;" role="alert">
             {{error}}
-            <button @click="errors.splice(errors.indexOf(error), 1)" type="button" class="close"
+            <button @click="errors.splice(errors.indexOf(error), 1)" type="button" class="btn-close"
                 style="float: right;" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
         </script>
       </div>
-      <div class="jumbotron text-light bg-dark m-3">
-        <h1 class="display-4">Projects</h1>
-        <p class="lead">
-          Projects' information below is updated dynamically via Gitlab's API and
-          is guaranteed to be up-to-date. Online demos can be accessed by clicking the badges.
-        </p>
+      <div class="text-light bg-dark rounded-3 m-3 p-5">
+        <div class="container-fluid py-5">
+          <h1 class="display-4 fw-bold">Projects</h1>
+          <p class="lead">
+            Projects' information below is updated dynamically via Gitlab's API and
+            is guaranteed to be up-to-date. Online demos can be accessed by clicking the badges.
+          </p>
+        </div>
       </div>
       <div class="text-light d-flex flex-wrap justify-content-around">
         <script type="text/x-template" class="show-on-js">
@@ -60,11 +62,11 @@
                   class="bg-dark d-flex justify-content-center align-items-center"
                   style="width: 100%; height: 15rem; position: absolute;">
                 <div class="spinner-border text-primary bg-dark" role="status">
-                  <span class="sr-only">Loading...</span>
+                  <span class="visually-hidden">Loading...</span>
                 </div>
               </div>
             </transition>
-            <div class="card-body bg-dark">
+            <div class="card-body text-light bg-dark">
               <h2 class="card-title">
                 <a :href="project.http_url_to_repo">
                   {{project.name}} <img src="styles/repo.svg" alt="" style="width: 1rem; height: 1rem;"/>
@@ -79,7 +81,7 @@
                     :alt="'Demo ' + (projectHasDemo[project.id] ? '' : 'un') + 'available'"/>
               </a>
               <div>
-                <span v-for="name in badges[project.id]" class="badge mr-2 text-light"
+                <span v-for="name in badges[project.id]" class="badge mx-1 text-light"
                     :style="badgeStyles[name]">
                   {{removeAllCaps(name)}}
                 </span>
@@ -101,7 +103,7 @@
                   </a>
                 </li>
                 <li title="Latest Release On"
-                    class="d-flex align-items-center list-group-item bg-dark border-info p-1">
+                    class="d-flex align-items-center list-group-item text-light bg-dark border-info p-1">
                   <img src="styles/history.svg" alt="" style="width: 1rem; height: 1rem;"/>
                   &nbsp;{{latestCreated[project.id].substring(0, 10)}}
                 </li>
@@ -124,9 +126,8 @@
                 <h1 v-if="false" class="modal-title h5">Unsupported Browser</h1>
                 <script type="text/x-template" class="show-on-js">
                   <button @click="hideModal()" type="button"
-                      class="close text-light" aria-label="Close" v-show="true"
+                      class="btn-close text-light" aria-label="Close" v-show="true"
                       style="display: none;" aria-hidden="true">
-                    &times;
                   </button>
                 </script>
               </div>
@@ -137,7 +138,7 @@
                   <div v-if="modal.body === null" class="justify-content-center align-items-center"
                   style="display: none;" :style="'width: 100%; height: 100%; display: flex;'">
                     <div class="spinner-border text-primary" role="status">
-                      <span class="sr-only">Loading...</span>
+                      <span class="visually-hidden">Loading...</span>
                     </div>
                   </div>
                 </script>
@@ -180,7 +181,8 @@
             aria-haspopup="true" aria-expanded="false">
           {{title}}
         </button>
-        <div v-if="opened" class="dropdown-menu" style="display: block;">
+        <div v-if="opened" class="dropdown-menu"
+            style="display: block; position: absolute; bottom: 40px;">
           <a v-for="record in items" :href="record.href"
               :download="record.fileName === undefined ?
               'download' : record.fileName"
